--- a/.github/workflows/laravel-pint.yml
+++ b/.github/workflows/laravel-pint.yml
@@ -30,5 +30,5 @@ jobs:
           git config user.name "gh-actions"
           git config user.email "gh@robertogallea.com"
           git add .
-          git commit -m "Laravel Pint"
+          git commit -m "Laravel Pint" || exit 0
           git push
