--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,4 +21,6 @@ jobs:
         run: composer install
 
       - name: Run Test
-        run: vendor/bin/pest
+        run: |
+          composer prepare
+          composer test test
