--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,6 +18,12 @@ jobs:
           extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, gd, redis, igbinary, msgpack, lzf, zstd, lz4, memcached, gmp, :php-psr
           tools: composer:v2
 
+      - name: Cache
+        uses: actions/cache@v4.1.2
+        with:
+          key: composer-cache-${{ hashFiles('**/composer.lock') }}
+          path: vendor/
+
       - name: Install Dependencies
         run: composer install -q --no-interaction
 
