--- a/.github/workflows/laravel-pint.yml
+++ b/.github/workflows/laravel-pint.yml
@@ -1,13 +1,16 @@
 name: Laravel Pint
 
 on:
-  push:
-    branches:
-      - main
+  pull_request
 
 jobs:
   laravel-pint:
     runs-on: ubuntu-latest
+
+    env:
+      PHP_VERSION: '8.3'
+      CACHE_KEY: extensions-cache-v1
+      PHP_EXTENSIONS: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, gd, redis, igbinary, msgpack, lzf, zstd, lz4, memcached, gmp, :php-psr
 
     steps:
       - name: Checkout code
@@ -15,10 +18,25 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
+      - name: Setup cache environment
+        id: extcache
+        uses: shivammathur/cache-extensions@v1
+        with:
+          php-version: ${{ env.PHP_VERSION }}
+          extensions: ${{ env.PHP_EXTENSIONS }}
+          key: ${{ env.CACHE_KEY }}
+
+      - name: Cache extensions
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.extcache.outputs.dir }}
+          key: ${{ steps.extcache.outputs.key }}
+          restore-keys: ${{ steps.extcache.outputs.key }}
+
       - name: Setup PHP and Composer
         uses: shivammathur/setup-php@2.31.1
         with:
-          php-version: '8.3'
+          php-version: ${{ env.PHP_VERSION }}
           tools: composer:v2
 
       - name: Install Laravel Pint
