--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,6 +7,11 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
 
+    env:
+      PHP_VERSION: '8.3'
+      CACHE_KEY: extensions-cache-v1
+      PHP_EXTENSIONS: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, gd, redis, igbinary, msgpack, lzf, zstd, lz4, memcached, gmp, :php-psr
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
@@ -15,9 +20,9 @@ jobs:
         id: extcache
         uses: shivammathur/cache-extensions@v1
         with:
-          php-version: '8.3'
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, gd, redis, igbinary, msgpack, lzf, zstd, lz4, memcached, gmp, :php-psr
-          key: extension-cache-v1
+          php-version: ${{ env.PHP_VERSION }}
+          extensions: ${{ env.PHP_EXTENSIONS }}
+          key: ${{ env.CACHE_KEY }}
 
       - name: Cache extensions
         uses: actions/cache@v4
@@ -29,15 +34,15 @@ jobs:
       - name: Setup PHP and Composer
         uses: shivammathur/setup-php@2.31.1
         with:
-          php-version: '8.3'
-          extensions: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, gd, redis, igbinary, msgpack, lzf, zstd, lz4, memcached, gmp, :php-psr
+          php-version: ${{ env.PHP_VERSION }}
+          extensions: ${{ env.PHP_EXTENSIONS }}
           tools: composer:v2
 
       - name: Get Composer cache dir
         id: composer-cache-dir
         run: echo dir=$(composer config cache-files-dir) >> $GITHUB_OUTPUT
 
-      - name: Cache deppendencies
+      - name: Cache dependencies
         uses: actions/cache@v4.1.2
         with:
           key: composer-cache-${{ hashFiles('**/composer.lock') }}
