--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -2,6 +2,15 @@ name: Setup
 
 description: Sets up PHP and Composer
 
+inputs:
+  php-version:
+    description: The PHP version(s) to use
+    required: true
+  php-extensions:
+    description: The PHP extensions you want to install
+    required: false
+    default: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, gd, redis, igbinary, msgpack, lzf, zstd, lz4, memcached, gmp, :php-psr
+
 runs:
   using: composite
   steps:
@@ -9,8 +18,8 @@ runs:
       id: extcache
       uses: shivammathur/cache-extensions@v1
       with:
-        php-version: ${{ env.PHP_VERSION }}
-        extensions: ${{ env.PHP_EXTENSIONS }}
+        php-version: ${{ inputs.php-version }}
+        extensions: ${{ inputs.php-extensions }}
         key: ${{ env.CACHE_KEY }}
 
     - name: Cache extensions
@@ -23,8 +32,8 @@ runs:
     - name: Setup PHP and Composer
       uses: shivammathur/setup-php@2.31.1
       with:
-        php-version: ${{ env.PHP_VERSION }}
-        extensions: ${{ env.PHP_EXTENSIONS }}
+        php-version: ${{ inputs.php-version }}
+        extensions: ${{ inputs.php-extensions }}
         tools: composer:v2
 
     - name: Get Composer cache dir
