--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -8,9 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      PHP_VERSION: '8.3'
       CACHE_KEY: extensions-cache-v1
-      PHP_EXTENSIONS: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, gd, redis, igbinary, msgpack, lzf, zstd, lz4, memcached, gmp, :php-psr
 
     steps:
       - name: Checkout code
@@ -18,15 +16,5 @@ jobs:
 
       - name: Setup
         uses: ./.github/actions/setup
-
-      - name: Install Dependencies
-        run: composer install -q --no-interaction
-
-      - name: Run Test
-        env:
-          DB_CONNECTION: sqlite
-          DB_DATABSAE: ":memory:"
-        run: |
-          composer prepare
-          vendor/bin/testbench vendor:publish --tag=pulse-migrations
-          composer test
+        with:
+          php-version: '8.3'
