--- a/.github/workflows/laravel-pint.yml
+++ b/.github/workflows/laravel-pint.yml
@@ -7,37 +7,17 @@ jobs:
   laravel-pint:
     runs-on: ubuntu-latest
 
-    env:
-      PHP_VERSION: '8.3'
-      CACHE_KEY: extensions-cache-v1
-      PHP_EXTENSIONS: dom, curl, libxml, mbstring, zip, pcntl, pdo, sqlite, pdo_sqlite, gd, redis, igbinary, msgpack, lzf, zstd, lz4, memcached, gmp, :php-psr
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v4.2.2
         with:
           ref: ${{ github.head_ref }}
 
-      - name: Setup cache environment
-        id: extcache
-        uses: shivammathur/cache-extensions@v1
+      - name: Setup
+        uses: ./.github/actions/setup
         with:
-          php-version: ${{ env.PHP_VERSION }}
-          extensions: ${{ env.PHP_EXTENSIONS }}
-          key: ${{ env.CACHE_KEY }}
-
-      - name: Cache extensions
-        uses: actions/cache@v4
-        with:
-          path: ${{ steps.extcache.outputs.dir }}
-          key: ${{ steps.extcache.outputs.key }}
-          restore-keys: ${{ steps.extcache.outputs.key }}
-
-      - name: Setup PHP and Composer
-        uses: shivammathur/setup-php@2.31.1
-        with:
-          php-version: ${{ env.PHP_VERSION }}
-          tools: composer:v2
+          php-version: '8.3'
+          php-extensions: 'json, dom, curl, libxml, mbstring'
 
       - name: Install Laravel Pint
         run: composer global require laravel/pint
