--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,5 +23,6 @@ jobs:
           DB_DATABASE: ":memory:"
         run: |
           composer prepare
+          rm vendor/orchestra/testbench-core/laravel/database/migrations/*.php
           vendor/bin/testbench vendor:publish --tag=pulse-migrations
           composer test --compact --coverage --min=80
