--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -50,5 +50,5 @@ runs:
       uses: actions/cache@v4.1.2
       with:
         key: composer-cache-${{ hashFiles('**/composer.lock') }}
-        path: vendor/
+        path: ${{ steps.composer-cache-dir.outputs.dir }}
         restore-keys: composer-cache-
