--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,12 +17,15 @@ jobs:
         with:
           php-version: '8.3'
 
+      - name: Install Project Dependencies
+        run: composer install -q --no-interaction --no-progress
+
       - name: Run Test
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: ":memory:"
         run: |
           composer prepare
-          rm vendor/orchestra/testbench-core/laravel/database/migrations/*.php
+          rm -rf vendor/orchestra/testbench-core/laravel/database
           vendor/bin/testbench vendor:publish --tag=pulse-migrations
           vendor/bin/pest --compact
