--- a/composer.json
+++ b/composer.json
@@ -30,7 +30,7 @@
     "require": {
         "php": "^8.1",
         "laravel/pulse": "^1.2",
-        "illuminate/contracts": "^11.0",
+        "illuminate/contracts": "^11.0|^12.0",
         "livewire/livewire": "^3.5"
     },
     "config": {
